# SHT3x

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/bee_button/: CMakeLists.txt  bee_button.c  bee_button.h
components/bee_deep_sleep/: CMakeLists.txt  bee_deep_sleep.c  bee_deep_sleep.h
components/bee_i2c/: CMakeLists.txt  bee_i2c.c  bee_i2c.h
components/bee_led/: CMakeLists.txt  bee_led.c  bee_led.h
components/bee_ledc/: CmakeLists.txt  bee_ledc.c  bee_ledc.h
components/bee_mqtt/: CMakeLists.txt  bee_mqtt.c  bee_mqtt.h
components/bee_nvs/: CMakeLists.txt  bee_nvs.c  bee_nvs.h
components/bee_ota/: CMakeLists.txt  bee_ota.c  bee_ota.h
components/bee_sht3x/: CMakeLists.txt  bee_sht3x.c  bee_sht3x.h
components/bee_wifi/: CMakeLists.txt  bee_wifi.c  bee_wifi.h
main/: CMakeLists.txt  bee_main.c  main.c
